// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`object > object 1`] = `
"type Zod2ts_0_duplojs = {
    name: string;
    age: number;
};"
`;

exports[`object > object with key optional 1`] = `
"type Zod2ts_1_duplojs = {
    name: string;
    age?: undefined;
};"
`;

exports[`object > object with union undefined 1`] = `
"type Zod2ts_2_duplojs = {
    name: string;
    age: number;
    optional?: undefined | string;
};"
`;
